# backend.ai-webserver

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  console-server.sample.conf  pyproject.toml  setup.cfg  webserver.sample.conf
.github/workflows/: default.yml  deploy-pypi.yml  lint-flake8.yml  lint-towncrier.yml  test-pytest.yml  timeline-check.yml  typecheck-mypy.yml
changes/: 12.feature  14.feature  15.feature  18.feature  21.fix  22.feature  23.fix  25.fix  26.misc  27.fix  28.feature  29.feature  30.fix  31.misc  32.misc  35.fix  36.fix  37.feature  38.feature  39.fix  40.feature  41.feature  43.fix  44.feature  45.fix  47.fix  48.fix  49.fix  50.feature  51.feature  53.feature
requirements/: dev.txt  lint.txt  test.txt  typecheck.txt
src/ai/backend/console/: __init__.py  auth.py  proxy.py  server.py
src/ai/backend/web/: __init__.py  proxy.py  server.py
tests/: test_auth.py
