[metadata]
name = backend.ai-webserver
version = attr: src.ai.backend.web.__version__
description = Backend.AI Web Server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://backend.ai
author = Lablup Inc.
author_email = devops@lablup.com
license = Proprietary
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Environment :: No Input/Output (Daemon)
    Topic :: Scientific/Engineering
    Topic :: Software Development
project_urls =
    Documentation = https://docs.backend.ai

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.9
setup_requires =
    setuptools>=54.2.0
install_requires =
    aiohttp~=3.7.4
    aiohttp_cors~=0.7
    aiohttp_session[aioredis]~=2.9.0
    aioredis~=1.3.1
    aiotools~=1.2.1
    async_timeout~=3.0
    attrs>=20.2
    click>=7.1
    coloredlogs>=10.0
    jinja2~=2.11.2
    uvloop~=0.15.2
    setproctitle>=1.2.1
    toml>=0.10.0
    backend.ai-client>=21.3.0
zip_safe = false
include_package_data = true

[options.extras_require]
build =
    wheel>=0.36.2
    twine>=3.4.1
    towncrier~=19.2.0
test =
    pytest~=6.2.2
    pytest-asyncio~=0.14.0
    pytest-aiohttp~=0.3.0
    pytest-cov
    pytest-mock~=3.5.1
    codecov
dev =
lint =
    flake8~=3.9.0
typecheck =
    mypy>=0.800

[options.packages.find]
where = src
include = ai.backend.*

[bdist_wheel]
universal = false

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E129,E221,E241,E722,E731,E401,W504,N801,N802
max-line-length = 105
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,docs,alembic

[tool:pytest]
testpaths = tests
markers =
    integration: Test cases that require other Backend.AI components

[mypy]
ignore_missing_imports = true
